--- a/.github/workflows/workflowfile.yaml
+++ b/.github/workflows/workflowfile.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   # This workflow contains a single job called "deploy"
-  print logs:
+  deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
