--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,84 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
-version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
+version: 2
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
-    steps:
-      - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+    Simpler_Trading:
+      docker:
+        - image: syedimran18/android-builds:buildtools33
+      working_directory: ~/repo
+      environment:
+        JVM_OPTS: -Xmx3200m
+        node: 16.16.0        
+      steps:
+        - checkout
+        - run:
+            name: NPM Install
+            command: |
+              ruby -v
+              npm install
+        - run:
+            name: Install gem
+            command: |
+              gem install bundler -v 2.3.26
+              gem update --system 3.2.3
+              gem install rake
+              gem install rainbow -v '2.2.2'
+              gem install fastlane -NV
+        - run:
+            name: "Verify json"
+            command: |
+              bundler init --gemspec=.gemspec_template
+              bundler install
+              bundler exec fastlane run validate_play_store_json_key
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+        # - run:
+        #     name: Install Cordova Android Platform
+        #     command: |
+        #       ionic cordova platform add android
+        #     no_output_timeout: 30m
+
+        # - run:
+        #     name: Prepare Cordova Android Platform
+        #     command: |
+        #       ionic cordova prepare android --no-build
+
+        # - run:
+        #     name: "Build Android"
+        #     command: |
+        #       ionic cordova build android --prod
+        #     no_output_timeout: 10m
+            
+        # - run:
+        #    name: "apk jar signing"
+        #    command: |
+        #       jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore $KEYSTORE_FILE -storepass $KEYSTORE_PASSWORD $AAB_FILE_NAME alias_name
+        #       jarsigner -verify $AAB_FILE_NAME
+
+#use this for copying the apk-
+        # - run:
+        #     name: "Copying APK"
+        #     command: |
+        #       mkdir -p /tmp/apk
+        #       cp -r /root/repo/platforms/android/app/build/outputs/apk/debug/app-debug.apk /tmp/apk
+        #       ls -ll /tmp/apk
+
+#use this for copying the aab file-
+        # - run:
+        #    name: "Copy aab"
+        #    command: |
+        #       mkdir -p /tmp/aab
+        #       cp -r /root/repo/platforms/android/app/build/outputs/bundle/release/app-release.aab /tmp/aab
+        #       ls -ll /tmp/aab
+
+        # - run:
+        #     name: Deploy apk to Play Store (alpha track)
+        #     command: |
+        #       bundler exec fastlane supply --aab /tmp/aab/*.aab --track alpha
+        
+        - store_artifacts:
+              path: /tmp/apk
+              destination: apk
+
 workflows:
-  say-hello-workflow:
-    jobs:
-      - say-hello
+    version: 2
+    build_and_deploy:
+      jobs:
+        - Simpler_Trading
